--- a/index.html
+++ b/index.html
@@ -3,57 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Financial Literacy Basics | Home</title>
-  <meta name="description" content="Welcome to Financial Literacy Basics: empowering you with the essential knowledge to manage money, budget, invest, avoid debt, and plan for retirement.">
-  <link rel="stylesheet" href="css/style.css">
+    <title>Homepage | My Website</title>
+    <meta name="description" content="Welcome to my website. Learn about our services, projects, and team.">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <!-- Back to top link -->
-  <a href="#top" class="back‑to‑top">Back to Top</a>
+    <header>
+        <h1>My Website</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div id="top"></div>
-  <header>
-    <h1>Financial Literacy Basics</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="budgeting.html">Budgeting</a>
-      <a href="investing.html">Investing</a>
-      <a href="credit.html">Credit</a>
-      <a href="debt.html">Debt</a>
-      <a href="retirement.html">Retirement</a>
-      <a href="glossary.html">Glossary</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">Contact</a>
-      <a href="credits.html">Credits</a>
-    </nav>
-  </header>
+    <main>
+        <section>
+            <h2>Welcome to Our Site</h2>
+            <article>
+                <p>
+                    This is the homepage content. It's designed to give visitors a quick overview of what the site is about. We are dedicated to providing high-quality solutions for all your needs. Our team of experts is ready to assist you with a wide range of services. We believe in innovation and customer satisfaction, and we strive to exceed your expectations every time. Our mission is to create lasting value for our clients and to build strong, long-term relationships.
+                    </p>
+                <img src="images/placeholder.jpg" alt="A generic placeholder image for the homepage.">
+            </article>
+        </section>
+    </main>
 
-  <main>
-    <section>
-      <h2>Welcome to Financial Literacy Basics</h2>
-      <img src="images/index.jpg" alt="Person holding piggy bank" class="article‑image">
-      <article>
-        <p>Managing personal finances well is one of the most important skills for achieving long‑term stability and success. On this site you’ll learn the key aspects of financial literacy: how to budget wisely, how to understand credit and debt, how to invest for the future, and how to plan for retirement. We also include a glossary of financial terms so you won’t be left confused by jargon.</p>
-        <p>Our mission is to simplify complex concepts so that anyone, regardless of background, feels confident making financial decisions. Whether you’re just starting out on your own or looking to refine your money management, our resources are here to guide you.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Financial Literacy Basics</p>
-  </footer>
-
-</body>
-</html>
+    <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
