--- a/index.html
+++ b/index.html
@@ -3,39 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage | My Website</title>
-    <meta name="description" content="Welcome to my website. Learn about our services, projects, and team.">
+    <title>Homepage | My Awesome Website</title>
+    <meta name="description" content="Welcome to My Awesome Website. We offer a wide range of services to meet your needs.">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header>
-        <h1>My Website</h1>
+        <h1>My Awesome Website</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/about.html">About Us</a></li>
+                <li><a href="pages/services.html">Services</a></li>
+                <li><a href="pages/budgeting.html">Contact Us</a></li>
+                <li><a href="pages/contact.html">Portfolio</a></li>
+                <li><a href="pages/credit.html">Blog</a></li>
+                <li><a href="pages/debt.html">FAQ</a></li>
+                <li><a href="pages/investing.html">Gallery</a></li>
+                <li><a href="pages/team.html">Our Team</a></li>
+                <li><a href="pages/testimonials.html">Testimonials</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section>
-            <h2>Welcome to Our Site</h2>
+            <h2>Discover Our Mission</h2>
             <article>
-                <p>
-                    This is the homepage content. It's designed to give visitors a quick overview of what the site is about. We are dedicated to providing high-quality solutions for all your needs. Our team of experts is ready to assist you with a wide range of services. We believe in innovation and customer satisfaction, and we strive to exceed your expectations every time. Our mission is to create lasting value for our clients and to build strong, long-term relationships.
-                    </p>
-                <img src="images/placeholder.jpg" alt="A generic placeholder image for the homepage.">
+                <p>Welcome to our site! We're dedicated to providing the best solutions for all your needs. We believe in innovation, quality, and customer satisfaction above all else. Our team is committed to excellence, constantly pushing the boundaries to deliver outstanding results. Our goal is to make a positive impact, one project at a time. We've built a reputation for reliability and trust, and we're proud of the relationships we've forged with our clients. Our journey started with a simple idea: to create something meaningful. That idea has blossomed into a full-fledged commitment to serve you better. Every day, we work to improve our services and expand our reach, ensuring that we can help more people achieve their goals. Thank you for visiting us and for considering us for your next big project. Let's create something great together.</p>
+                <img src="images/placeholder1.jpg" alt="A beautiful landscape showing our commitment to nature.">
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
+        <p>&copy; 2025 My Awesome Website. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
