--- a/pages/about.html
+++ b/pages/about.html
@@ -3,55 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | FLB</title>
+    <title>About Us | My Awesome Website</title>
+    <meta name="description" content="Learn more about our company's history, values, and the dedicated team behind our success.">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>About Us | Financial Literacy Basics</title>
-  <meta name="description" content="Learn who we are, our mission, and why financial literacy matters to everyday people.">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <header>
+        <h1>My Awesome Website</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="budgeting.html">Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="credit.html">Portfolio</a></li>
+                <li><a href="debt.html">Blog</a></li>
+                <li><a href="investing.html">FAQ</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="team.html">Our Team</a></li>
+                <li><a href="testimonials.html">Testimonials</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <a href="#top" class="back‑to‑top">Back to Top</a>
-  <div id="top"></div>
-  <header>
-    <h1>About Financial Literacy Basics</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="budgeting.html">Budgeting</a>
-      <a href="investing.html">Investing</a>
-      <a href="credit.html">Credit</a>
-      <a href="debt.html">Debt</a>
-      <a href="retirement.html">Retirement</a>
-      <a href="glossary.html">Glossary</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">Contact</a>
-      <a href="credits.html">Credits</a>
-    </nav>
-  </header>
+    <main>
+        <section>
+            <h2>Our Story</h2>
+            <article>
+                <p>We started our journey with a simple vision: to build a company that puts people first. Our founders, a small group of passionate individuals, came together with a shared goal of creating innovative solutions that solve real-world problems. We believe in a collaborative approach, where every team member's voice is heard and valued. We've grown from a small startup into a thriving business, but our core values remain the same. We're committed to integrity, transparency, and a relentless pursuit of excellence. We've faced challenges and celebrated successes, all of which have shaped us into the resilient company we are today. Our story is one of perseverance, innovation, and a deep-seated belief in the power of teamwork. We're excited about what the future holds and are dedicated to continuing our mission of making a difference in the world. Thank you for being a part of our story.</p>
+                <img src="../images/placeholder2.jpg" alt="A team of professionals collaborating in a modern office space.">
+            </article>
+        </section>
+    </main>
 
-  <main>
-    <section>
-      <h2>Our Mission</h2>
-      <img src="images/about.jpg" alt="Hands holding coins" class="article‑image">
-      <article>
-        <p>Financial Literacy Basics was created to bridge the gap between complex financial systems and everyday people. Our aim is to empower individuals to make informed money decisions without feeling overwhelmed. We believe that understanding money is not just for experts—it’s essential for everyone, no matter their income, education, or background.</p>
-        <p>We provide clear, accessible content on topics like budgeting, saving, investing, credit, and retirement planning. Each page is crafted to build your knowledge step by step, with real‑world examples and actionable advice. We hope to foster confidence, reduce financial stress, and lead you toward financial independence.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Financial Literacy Basics</p>
-  </footer>
-
-</body>
-</html>
-
+    <footer>
+        <p>&copy; 2025 My Awesome Website. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
