--- a/pages/budgeting.html
+++ b/pages/budgeting.html
@@ -3,55 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Budget Tracker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Budgeting Basics | Financial Literacy Basics</title>
-  <meta name="description" content="Discover how to create and stick to a budget that works, tips for tracking income, expenses, and saving money.">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-  <a href="#top" class="back‑to‑top">Back to Top</a>
-  <div id="top"></div>
-  <header>
-    <h1>Budgeting Basics</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="budgeting.html">Budgeting</a>
-      <a href="investing.html">Investing</a>
-      <a href="credit.html">Credit</a>
-      <a href="debt.html">Debt</a>
-      <a href="retirement.html">Retirement</a>
-      <a href="glossary.html">Glossary</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">Contact</a>
-      <a href="credits.html">Credits</a>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h2>What Is a Budget?</h2>
-      <img src="images/budgeting.jpg" alt="Person writing budget plan" class="article‑image">
-      <article>
-        <p>A budget is a plan that helps you track what money you have coming in and what goes out. It’s a way to assign every dollar (or peso) a purpose: whether that’s bills, savings, fun, or emergencies. Without a budget, it’s easy to spend more than you realize and end up stressed or in debt.</p>
-        <p>Good budgeting starts with listing your income and expenses, then categorizing them. You can use the 50/30/20 rule (50% needs, 30% wants, 20% savings/debt), or tailor percentages to your situation. Regularly reviewing and adjusting your budget keeps it realistic. This discipline builds financial confidence and helps you reach goals faster.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Financial Literacy Basics</p>
-  </footer>
-
-</body>
-</html>
-
+    <div class="container">
+        <h1>Budget Tracker</h1>
+        <div class="balance-display">
+            <h2>Current Balance: $<span id="balance">0.00</span></h2>
+        </div>
+        <div class="transaction-form">
+            <h2>Add New Transaction</h2>
+            <form id="budget-form">
+                <div class="form-group">
+                    <label for="description">Description:</label>
+                    <input type="text" id="description" placeholder="e.g., Groceries, Salary" required>
+                </div>
+                <div class="form-group">
+                    <label for="amount">Amount:</label>
+                    <input type="number" id="amount" placeholder="e.g., 50.00" required>
+                </div>
+                <div class="form-group">
+                    <label for="type">Type:</label>
+                    <select id="type">
+                        <option value="income">Income</option>
+                        <option value="expense">Expense</option>
+                    </select>
+                </div>
+                <button type="submit">Add Transaction</button>
+            </form>
+        </div>
+        <div class="transaction-history">
+            <h2>Transaction History</h2>
+            <ul id="history-list"></ul>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
