--- a/pages/budgeting.html
+++ b/pages/budgeting.html
@@ -1,43 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Budget Tracker</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>| Budgeting Guide</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+
+    header {
+      background-color: #2e8b57;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    nav {
+      background-color: #246b45;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      padding: 1rem;
+      gap: 1rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 960px;
+      margin: auto;
+      padding: 2rem;
+      background-color: white;
+    }
+
+    section {
+      margin-bottom: 3rem;
+    }
+
+    h2 {
+      color: #2e8b57;
+      margin-bottom: 1rem;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      margin-top: 1rem;
+      border-radius: 6px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 6px;
+      margin-top: 1rem;
+    }
+
+    form {
+      display: grid;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    label {
+      font-weight: bold;
+    }
+
+    input, textarea {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+
+    button[type="submit"] {
+      background-color: #2e8b57;
+      color: white;
+      border: none;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button[type="submit"]:hover {
+      background-color: #1f5134;
+    }
+
+    .back-home {
+      text-align: center;
+      margin: 3rem 0 1rem;
+    }
+
+    .back-home a {
+      background-color: #2e8b57;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .back-home a:hover {
+      background-color: #1f5134;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #246b45;
+      color: white;
+    }
+
+    /* Back to Top Button */
+    #backToTop {
+      display: none;
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #2e8b57;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 16px;
+      z-index: 1000;
+    }
+
+    #backToTop:hover {
+      background-color: #1f5134;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      iframe {
+        height: 300px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Budget Tracker</h1>
-        <div class="balance-display">
-            <h2>Current Balance: $<span id="balance">0.00</span></h2>
-        </div>
-        <div class="transaction-form">
-            <h2>Add New Transaction</h2>
-            <form id="budget-form">
-                <div class="form-group">
-                    <label for="description">Description:</label>
-                    <input type="text" id="description" placeholder="e.g., Groceries, Salary" required>
-                </div>
-                <div class="form-group">
-                    <label for="amount">Amount:</label>
-                    <input type="number" id="amount" placeholder="e.g., 50.00" required>
-                </div>
-                <div class="form-group">
-                    <label for="type">Type:</label>
-                    <select id="type">
-                        <option value="income">Income</option>
-                        <option value="expense">Expense</option>
-                    </select>
-                </div>
-                <button type="submit">Add Transaction</button>
-            </form>
-        </div>
-        <div class="transaction-history">
-            <h2>Transaction History</h2>
-            <ul id="history-list"></ul>
-        </div>
+
+  <header>
+    <h1>Smart Budgeting</h1>
+    <p>Your guide to taking control of your finances!</p>
+  </header>
+
+  <nav>
+    <a href="about.html">← Home</a>
+    <a href="#what-is-budgeting">What is Budgeting?</a>
+    <a href="#why-budgeting">Why It Matters?</a>
+    <a href="#how-to-budget">How to Budget?</a>
+    <a href="#video">Video</a>
+    <a href="#map">Find Help</a>
+    <a href="#form">Contact</a>
+  </nav>
+
+  <main>
+    <section id="what-is-budgeting">
+      <h2>What is Budgeting?</h2>
+      <p>Budgeting is the process of planning how to spend your money. It allows you to prioritize spending and balance your income with your expenses.</p>
+      <p>A budget is a guide that keeps you on the path to reach your financial goals. Budgeting keeps your finances under control, shows when you need to make adjustments to your spending, and helps you decide where your money goes instead of wondering where it all went.</p>
+      <img src="https://via.placeholder.com/800x400?text=Budgeting+Concept" alt="Budgeting image">
+    </section>
+
+    <section id="budgeting-helps-you-achieved-academic-and-financial-goals">
+      <h2>Budgeting Helps You Achieve Academic and Financial Goals</h2>
+      <p>While you’re in college or career school, you’ll need to learn how to manage your finances, plan for changes, and prepare for the unexpected. Budgeting will help you build decision-making skills and reach your financial and academic goals.</p>
+    </section>
+
+    <section id="why-budgeting">
+      <h2>Why Budgeting Matters?</h2>
+      <ul>
+        <li>Helps track your income and expenses</li>
+        <li>Prevents overspending and debt accumulation</li>
+        <li>Promotes savings and financial stability</li>
+        <li>Gives you control over your money</li>
+      </ul>
+      <img src="https://via.placeholder.com/800x400?text=Financial+Planning" alt="Financial planning">
+    </section>
+
+    <section id="how-to-budget">
+      <h2>How to Create a Budget</h2>
+      <ol>
+        <li>Calculate your total monthly income</li>
+        <li>List all your expenses</li>
+        <li>Group expenses by fixed, variable, and discretionary</li>
+        <li>Set spending limits for each category</li>
+        <li>Track progress and make adjustments</li>
+      </ol>
+      <img src="https://via.placeholder.com/800x400?text=Budget+Worksheet" alt="Budget worksheet">
+    </section>
+
+    <section id="video">
+      <h2>Watch: Budgeting for Beginners</h2>
+      <iframe src="https://www.youtube.com/embed/6Ib-bdko5cE?si=k2a7gjDQtWUxuppC" title="YouTube video player" allowfullscreen></iframe>
+      <p style="font-size: 0.9rem; color: #777;">Credit: Federal Student Aid</p>
+    </section>
+
+    <section id="map">
+      <h2>Find a Budgeting Counselor Near You</h2>
+      <p>Need personalized help? Visit a financial education center in your area.</p>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
+        allowfullscreen=""
+        loading="lazy">
+      </iframe>
+    </section>
+
+    <section id="form">
+      <h2>Get in Touch / Subscribe for Budgeting Tips</h2>
+      <p>Submit your question or subscribe for budgeting guides, worksheets, and tips:</p>
+      <form>
+        <label for="name">Your Name</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+        <label for="email">Your Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+        <label for="message">Your Question or Comment</label>
+        <textarea id="message" name="message" rows="5" placeholder="Type here..."></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <div class="back-home">
+      <a href="about.html">&larr; Back to Home Page</a>
     </div>
-    <script src="script.js"></script>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Financial Literate. All rights reserved.</p>
+  </footer>
+
+  <button id="backToTop" title="Back to Top">↑</button>
+
+  <script>
+    const backToTopBtn = document.getElementById("backToTop");
+
+    window.onscroll = function () {
+      if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+        backToTopBtn.style.display = "block";
+      } else {
+        backToTopBtn.style.display = "none";
+      }
+    };
+
+    backToTopBtn.addEventListener("click", function () {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+  </script>
+
 </body>
 </html>
