--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | My Awesome Website</title>
+    <title>Contact Us | Financial Literate</title>
     <meta name="description" content="Get in touch with us. Fill out our contact form to ask a question or request a service.">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <h1>My Awesome Website</h1>
+        <h1>Financial Literate</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="budgeting.html">Services</a></li>
                 <li><a href="contact.html" class="active">Contact Us</a></li>
-                <li><a href="credit.html">Portfolio</a></li>
-                <li><a href="debt.html">Blog</a></li>
-                <li><a href="investing.html">FAQ</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="team.html">Our Team</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
+                 <li><a href="pages/financial-literacy.html">Financial Literacy</a></li>
+                <li><a href="budgeting.html">Budgeting</a></li>
+                <li><a href="credit.html">Credit</a></li>
+                <li><a href="debt.html">Debt</a></li>
+                <li><a href="investing.html">Investing</a></li>
+                <li><a href="banking.html">Banking</a></li>      
             </ul>
         </nav>
     </header>
@@ -54,8 +53,13 @@
         </section>
     </main>
 
+     <!-- Back to Home Page -->
+    <div class="back-home">
+      <a href = "about.html">&larr; Back to Home Page</a>
+    </div>
+
     <footer>
-        <p>&copy; 2025 My Awesome Website. All Rights Reserved.</p>
+        <p>&copy; 2025 Financial Literate. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
