--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <p>We know that the earlier you learn the basics of how money works, the more likely you will be confident and successful with your finances later in life. It’s never too late to start learning, but it pays to start the earliest you can. The first steps into the world of money start with awareness about the need to be educated and immersed into good money habits, and then with education on how to do so.</p>
                 <p>Banking, budgeting, saving, credit, debt, and investing are the pillars that support most of the financial decisions that we’ll make in our lives.</p>
                 <p>On this site, we will help you to understand the pillars or financial literacy. Learn with us, enjoy! </p>
-                <img src="images/placeholder1.jpg" alt="A beautiful landscape showing our commitment to nature.">
+                <img src="FL.jpg" alt="A beautiful landscape showing our commitment to nature.">
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Financial Literate. All Rights Reserved.</p>
+        <p>&copy; 2025 Financial Literacy. All Rights Reserved.</p>
     </footer>
     
     <!-- Back to Top Button -->
