--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
             <h2>Get in Touch</h2>
             <article>
                 <p>We'd love to hear from you! Whether you have a question about our services, a project idea, or just want to say hello, feel free to reach out. Our team is ready to assist you with any inquiries you may have. We are committed to responding promptly and providing the information you need. Please use the contact form below, and we'll get back to you as soon as possible. Your feedback is important to us, as it helps us improve and serve you better. We look forward to the opportunity to connect and collaborate with you. Thank you for your interest in our work; we appreciate your time and consideration. Let's start a conversation that leads to something amazing.</p>
-                <img src="../images/placeholder3.jpg" alt="A person typing an email on a laptop, symbolizing communication.">
+                <img src="contact.jpg" alt="A person typing an email on a laptop, symbolizing communication.">
             </article>
         </section>
         <section>
