--- a/pages/credit.html
+++ b/pages/credit.html
@@ -152,7 +152,7 @@
       <p>
         Credit is the ability to borrow money or access goods or services with the understanding that you’ll pay later. It plays a crucial role in personal and business finance.
       </p>
-      <img src="https://via.placeholder.com/800x400?text=Credit+Definition" alt="What is credit">
+      <img src="credit.jpg" alt="What is credit">
     </section>
 
     <section id="why-credit-matters">
@@ -163,7 +163,7 @@
         <li>Improve chances for rental approvals</li>
         <li>Access better financial opportunities</li>
       </ul>
-      <img src="https://via.placeholder.com/800x400?text=Credit+Score+Matters" alt="Credit importance">
+      <img src="credit ule.jpg" alt="Credit importance">
     </section>
 
     <section id="improve-credit">
@@ -175,7 +175,7 @@
         <li>Check your credit report regularly</li>
         <li>Dispute any errors</li>
       </ol>
-      <img src="https://via.placeholder.com/800x400?text=Improve+Credit+Score" alt="Improving credit">
+      <img src="improving credit.jpg" alt="Improving credit">
     </section>
 
     <section ide="advantages">
@@ -216,8 +216,8 @@
       <h2>Find a Credit Counselor Near You</h2>
       <p>Locate a certified credit counselor to help you manage or repair your credit:</p>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
-        allowfullscreen=""
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      
         loading="lazy"
       ></iframe>
     </section>
