--- a/pages/debt.html
+++ b/pages/debt.html
@@ -177,7 +177,7 @@
     <section id="video">
       <h2>Debt Explained (Video)</h2>
       <iframe 
-        src= "https://www.youtube.com/embed/ho0V6Mhtvjo?si=GUGsRfdx0BL1FEN7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>Crdts: MoneyAcademy</iframe> 
+        src= "https://www.youtube.com/embed/ho0V6Mhtvjo?si=GUGsRfdx0BL1FEN7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> Crdts: MoneyAcademy
       </iframe>
     </section>
 
@@ -185,9 +185,8 @@
       <h2>Find a Credit Counselor Near You</h2>
       <p>Use the map below to locate financial counseling services near your area:</p>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
-        allowfullscreen=""
-        loading="lazy">
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       
       </iframe>
     </section>
 
