--- a/pages/financial-literacy.html
+++ b/pages/financial-literacy.html
@@ -184,7 +184,7 @@
       <p>
         Financial literacy is the foundation of your relationship with money. It empowers you to manage debt, build savings, understand credit, and plan for long-term goals like retirement or home ownership.
       </p>
-      <img src="https://via.placeholder.com/800x400?text=Money+Education" alt="Financial education image">
+      <img src="financial L.jpg" alt="Financial education image">
     </section>
 
     <section id="topics">
@@ -200,7 +200,7 @@
 
     <section id="video">
       <h2>Watch: Introduction to Financial Literacy</h2>
-      <iframe src="https://www.youtube.com/embed/rv8tfdhDqaE" title="Financial Literacy Video" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/DTBF5b2AkbE?si=H6vIvyw2F-J8-cRX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>Crdts: IOL Inc.
     </section>
 
     <section id="form">
@@ -226,7 +226,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Financial Literacy Project. All rights reserved.</p>
+    <p>&copy; 2025 Financial Literacy. All rights reserved.</p>
   </footer>
 
   <!-- Back to Top Button -->
