--- a/pages/about.html
+++ b/pages/about.html
@@ -31,13 +31,13 @@
             <h2>Our Story</h2>
             <article>
                 <p>We started our journey with a simple vision: to build a company that puts people first. Our founders, a small group of passionate individuals, came together with a shared goal of creating innovative solutions that solve real-world problems. We believe in a collaborative approach, where every team member's voice is heard and valued. We've grown from a small startup into a thriving business, but our core values remain the same. We're committed to integrity, transparency, and a relentless pursuit of excellence. We've faced challenges and celebrated successes, all of which have shaped us into the resilient company we are today. Our story is one of perseverance, innovation, and a deep-seated belief in the power of teamwork. We're excited about what the future holds and are dedicated to continuing our mission of making a difference in the world. Thank you for being a part of our story.</p>
-                <img src="../images/placeholder2.jpg" alt="A team of professionals collaborating in a modern office space.">
+                <img src="about.jpg" alt="A team of professionals collaborating in a modern office space.">
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Financila Literate. All Rights Reserved.</p>
+        <p>&copy; 2025 Financial Literacy. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
