--- a/pages/banking.html
+++ b/pages/banking.html
@@ -174,12 +174,12 @@
 <body>
 
   <header>
-    <h1>Banking</h1>
+    <h1>| Banking</h1>
     <p>Understand how banks work and how to use them wisely</p>
   </header>
 
   <nav>
-    <a href="#what-is-banking">What is Banking?</a>
+    <a href="#what-is-banking">What is Banking</a>
     <a href="#services">Services</a>
     <a href="#how-to-choose">Choosing a Bank</a>
     <a href="#video">Video</a>
@@ -193,7 +193,7 @@
       <p>
         Banking refers to managing money and providing services like savings, loans, and digital access to funds. Banks help people securely save, invest, and borrow money for various personal and business needs.
       </p>
-      <img src="https://via.placeholder.com/800x400?text=Banking+Basics" alt="Banking Basics">
+      <img src="banking.jpg" alt="Banking Basics">
     </section>
 
     <section id="services">
@@ -205,7 +205,7 @@
         <li><strong>Credit Cards:</strong> Borrow short-term and build your credit.</li>
         <li><strong>Mobile Banking:</strong> Manage accounts from your phone or computer.</li>
       </ul>
-      <img src="https://via.placeholder.com/800x400?text=Banking+Services" alt="Bank Services">
+      <img src="bank services.jpg" alt="Bank Services">
     </section>
 
     <section id="how-to-choose">
@@ -213,20 +213,20 @@
       <p>
         Consider location, fees, interest rates, mobile features, and customer service. Compare online banks with local branches for better financial convenience.
       </p>
-      <img src="https://via.placeholder.com/800x400?text=Choosing+a+Bank" alt="Choosing a Bank">
+      <img src="core banking.jpg" alt="Choosing a Bank">
     </section>
 
     <section id="video">
       <h2>Watch: Banking Explained</h2>
-      <iframe height="400" src="https://www.youtube.com/embed/O2fvWvI5GMg" title="Banking Explained Video" allowfullscreen></iframe>
+      <iframe
+        width="560" height="315" src="https://www.youtube.com/embed/fTTGALaRZoc?si=Ds2BRqn4-fPbWHI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>Crdts: Kurzgesagt - In a Nutshell store
     </section>
 
     <section id="map">
       <h2>Find a Local Bank Branch</h2>
       <p>Use the map below to locate bank branches or ATMs near your area.</p>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
-        width="100%" height="400" allowfullscreen loading="lazy">
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </iframe>
     </section>
 
