--- a/pages/budgeting.html
+++ b/pages/budgeting.html
@@ -181,7 +181,7 @@
       <h2>What is Budgeting?</h2>
       <p>Budgeting is the process of planning how to spend your money. It allows you to prioritize spending and balance your income with your expenses.</p>
       <p>A budget is a guide that keeps you on the path to reach your financial goals. Budgeting keeps your finances under control, shows when you need to make adjustments to your spending, and helps you decide where your money goes instead of wondering where it all went.</p>
-      <img src="https://via.placeholder.com/800x400?text=Budgeting+Concept" alt="Budgeting image">
+      <img src="budgeting.jpg" alt="Budgeting image">
     </section>
 
     <section id="budgeting-helps-you-achieved-academic-and-financial-goals">
@@ -197,7 +197,7 @@
         <li>Promotes savings and financial stability</li>
         <li>Gives you control over your money</li>
       </ul>
-      <img src="https://via.placeholder.com/800x400?text=Financial+Planning" alt="Financial planning">
+      <img src="finance.jpg" alt="Financial planning">
     </section>
 
     <section id="how-to-budget">
@@ -209,7 +209,7 @@
         <li>Set spending limits for each category</li>
         <li>Track progress and make adjustments</li>
       </ol>
-      <img src="https://via.placeholder.com/800x400?text=Budget+Worksheet" alt="Budget worksheet">
+      <img src="budgetworksheet.jpg" alt="Budget worksheet">
     </section>
 
     <section id="video">
@@ -222,9 +222,7 @@
       <h2>Find a Budgeting Counselor Near You</h2>
       <p>Need personalized help? Visit a financial education center in your area.</p>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
-        allowfullscreen=""
-        loading="lazy">
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </iframe>
     </section>
 
@@ -251,7 +249,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Financial Literate. All rights reserved.</p>
+    <p>&copy; 2025 Financial Literacy. All rights reserved.</p>
   </footer>
 
   <button id="backToTop" title="Back to Top">↑</button>
