--- a/pages/investing.html
+++ b/pages/investing.html
@@ -156,7 +156,7 @@
       <p>
         Investing is the act of allocating resources—usually money—with the expectation of generating an income or profit. Unlike saving, investing puts your money to work to grow over time.
       </p>
-      <img src="https://via.placeholder.com/800x400?text=Investing+Basics" alt="Investing Basics">
+      <img src="investing.jpg" alt="Investing Basics">
     </section>
 
     <section id="why-invest">
@@ -167,7 +167,7 @@
         <li>Achieve long-term financial goals (retirement, education, etc.)</li>
         <li>Generate passive income</li>
       </ul>
-      <img src="https://via.placeholder.com/800x400?text=Wealth+Growth" alt="Wealth Growth">
+      <img src="invest.jpg" alt="Wealth Growth">
     </section>
 
     <section id="types-of-investments">
@@ -179,22 +179,20 @@
         <li><strong>Mutual Funds:</strong> Pooled investment managed by professionals</li>
         <li><strong>ETFs:</strong> Exchange-Traded Funds that track indices or sectors</li>
       </ul>
-      <img src="https://via.placeholder.com/800x400?text=Investment+Types" alt="Investment Types">
+      <img src="types.jpg" alt="Investment Types">
     </section>
 
     <section id="video">
       <h2>Watch: Investing for Beginners</h2>
-      <iframe src="https://www.youtube.com/embed/Jv3Vv_sQMxQ" title="Investing video" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/qIw-yFC-HNU?si=8sqDZ7KYml3UZ6tN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> Crdts: Professor Dave Explains 
     </section>
 
     <section id="map">
       <h2>Find a Local Investment Advisor</h2>
       <p>Use the map below to locate certified financial planners near you:</p>
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354779480346!2d-122.41941568468133!3d37.7749292797594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808cba15b7c3%3A0x4c7d4e2b80dbbd56!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1633214634036"
-        allowfullscreen=""
-        loading="lazy"
-      ></iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </iframe>
     </section>
 
     <!-- Styled Back to Home Page Button -->
