--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Financial Literate</h1>
+        <h1>Financial Literacy</h1>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
