--- a/pages/about.html
+++ b/pages/about.html
@@ -15,12 +15,14 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html" class="active">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="pages/financial-literacy.html">Financial Literacy</a></li>
+                <li><a href="financial-literacy.html">Financial Literacy</a></li>
                 <li><a href="budgeting.html">Budgeting</a></li>
                 <li><a href="credit.html">Credit</a></li>
                 <li><a href="debt.html">Debt</a></li>
                 <li><a href="investing.html">Investing</a></li>
                  <li><a href="banking.html">Banking</a></li>
+                 <li><a href="saving.html">Savings</a></li>
+               
                  
             </ul>
         </nav>
