--- a/pages/banking.html
+++ b/pages/banking.html
@@ -174,8 +174,8 @@
 <body>
 
   <header>
-    <h1>| Banking</h1>
-    <p>Understand how banks work and how to use them wisely</p>
+    <h1>Banking</h1>
+    <p>Understand how banks work and how to use them wisely.</p>
   </header>
 
   <nav>
@@ -254,7 +254,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Financial Wisdom. All rights reserved.</p>
+    <p>&copy; 2025 Financial Literacy. All rights reserved.</p>
   </footer>
 
   <!-- Back to Top Button -->
