--- a/pages/credit.html
+++ b/pages/credit.html
@@ -217,9 +217,7 @@
       <p>Locate a certified credit counselor to help you manage or repair your credit:</p>
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.053053310849!2d120.98713687541897!3d14.596052785889766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9f64e3e10c7%3A0xe9a859a1a53fd908!2s438%20J%20Nepomuceno%20St%2C%20Quiapo%2C%20Manila%2C%201001%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1758720421488!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      
-        loading="lazy"
-      ></iframe>
+      </iframe>
     </section>
 
     <!-- Back to Home Page -->
@@ -229,7 +227,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Financial Literate. All rights reserved.</p>
+    <p>&copy; 2025 Financial Literacy. All rights reserved.</p>
   </footer>
 
   <!-- Back to Top Button -->
