--- a/pages/debt.html
+++ b/pages/debt.html
@@ -197,7 +197,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Financial Literate. All rights reserved.</p>
+    <p>&copy; 2025 Financial Literacy. All rights reserved.</p>
   </footer>
 
   <!-- Back to Top Button -->
